@@ -359,6 +359,7 @@ Victor Toni
 Vincent Legoll
 Volker Leidl
 Waldek Herka
+Wang Weijun
 Will Wang
 William Bernardet
 William Ferguson
